--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
               <span class="text-dark">IT Student</span> at University
             </h2>
             <p class="font-medium text-secondary mb-10 leading-relaxed">
-              Front-end itu mudah dan menyenangkan bukan?
-              <span class="font-bold text-dark">bukan!</span>
+              Nothing last's forever, we can change the
+              <span class="font-bold text-dark">future!</span>
             </p>
             <a
               href="#contact"
@@ -135,13 +135,14 @@
               <span
                 class="absolute bottom-0 -z-10 left-1/2 -translate-x-1/2 md:scale-125"
                 ><svg
-                  width="400"
-                  height="400"
+                  width="310"
+                  height="320"
                   viewBox="0 0 200 200"
                   xmlns="http://www.w3.org/2000/svg"
+                  class="sm:w-[500] sm:h-[500]"
                 >
                   <path
-                    fill="#14b8a6"
+                    fill="#0ea5e9"
                     d="M53.7,-46.4C67.4,-40,74.8,-20,71,-3.8C67.2,12.4,52.2,24.8,38.5,37.1C24.8,49.4,12.4,61.7,1.5,60.3C-9.5,58.8,-18.9,43.6,-31.2,31.2C-43.5,18.9,-58.6,9.5,-65.1,-6.5C-71.6,-22.5,-69.5,-44.9,-57.2,-51.4C-44.9,-57.8,-22.5,-48.2,-1.2,-47C20,-45.8,40,-52.9,53.7,-46.4Z"
                     transform="translate(100 100) scale(1.1)"
                   />
