edited portfolio taildcss

--- a/blogs/resensi.html
+++ b/blogs/resensi.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resensi Buku</title>
     <link rel="stylesheet" href="../dist/output.css" />
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/icon.png" />
   </head>
   <body
     class="bg-cover bg-transparent"
@@ -63,23 +63,23 @@
               <img
                 src="img/buku.jpg"
                 alt="The Sign of Four"
-                class="max-w-sm w-52 mx-4 py-2 shadow-xl"
+                class="sm:w-64 w-32 mr-4 py-2 shadow-xl"
               />
-              <ul class="list-disc ml-2 md:text-lg">
-                <li class="text-sm font-medium text-dark">
+              <ul class="list-disc ml-2 text-sm md:text-lg">
+                <li class="font-medium text-dark">
                   Judul Buku: The Sign of Four
                 </li>
-                <li class="text-sm font-medium text-dark">
+                <li class="font-medium text-dark">
                   Penulis: Sir Arthur Conan Doyle
                 </li>
-                <li class="text-sm font-medium text-dark">
+                <li class="font-medium text-dark">
                   Penerbit: PT Gramedia Pustaka Utama
                 </li>
-                <li class="text-sm font-medium text-dark">
+                <li class="font-medium text-dark">
                   Jumlah Halaman: 160 Halaman
                 </li>
-                <li class="text-sm font-medium text-dark">Kota: Jakarta</li>
-                <li class="text-sm font-medium text-dark">Tahun: 2019</li>
+                <li class="font-medium text-dark">Kota: Jakarta</li>
+                <li class="font-medium text-dark">Tahun: 2019</li>
               </ul>
             </div>
 
@@ -258,9 +258,13 @@
                 <tr>
                   <td>Contact</td>
                   <td>:</td>
-                  <td><a href="mailto:conanfajar13@gmail.com" class="text-primary hover:text-teal-600" 
+                  <td>
+                    <a
+                      href="mailto:conanfajar13@gmail.com"
+                      class="text-primary hover:text-teal-600"
                       >conanfajar13@gmail.com</a
-                    ></td>
+                    >
+                  </td>
                 </tr>
               </table>
             </div>
