update some content

--- a/blogs/frontend.html
+++ b/blogs/frontend.html
@@ -5,7 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Apa itu Front-end?</title>
     <link rel="stylesheet" href="../dist/output.css" />
-    <link rel="icon" href="img/icon.png">
+    <link rel="icon" href="img/icon.png" />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body
     class="bg-cover bg-transparent"
@@ -215,9 +222,13 @@
                 <tr>
                   <td>Contact</td>
                   <td>:</td>
-                  <td><a href="mailto:conanfajar13@gmail.com" class="text-primary hover:text-teal-600" 
-                      >conanfajar13@gmail.com</a
-                    ></td>
+                  <td>
+                    <a
+                      href="mailto:fajarnurdiansyah004@gmail.com"
+                      class="text-primary hover:text-teal-600"
+                      >fajarnurdiansyah004@gmail.com</a
+                    >
+                  </td>
                 </tr>
               </table>
             </div>
