--- a/blogs/resensi.html
+++ b/blogs/resensi.html
@@ -6,6 +6,13 @@
     <title>Resensi Buku</title>
     <link rel="stylesheet" href="../dist/output.css" />
     <link rel="icon" href="img/icon.png" />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body
     class="bg-cover bg-transparent"
@@ -260,9 +267,9 @@
                   <td>:</td>
                   <td>
                     <a
-                      href="mailto:conanfajar13@gmail.com"
+                      href="mailto:fajarnurdiansyah004@gmail.com"
                       class="text-primary hover:text-teal-600"
-                      >conanfajar13@gmail.com</a
+                      >fajarnurdiansyah004@gmail.com</a
                     >
                   </td>
                 </tr>
