--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" href="dist/output.css" />
     <title>Portfolio Tailwind CSS</title>
     <link rel="icon" href="dist/img/icon.png" />
+    <!-- FONT -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- HEADER START -->
@@ -310,20 +317,24 @@
           class="w-full px-4 flex flex-wrap justify-center xl:w-10/12 xl:mx-auto"
         >
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <a href="https://fajarnur0.github.io/kalkulus/" target="_blank"
-                ><img
-                  src="dist/img/portfolio/1.png"
-                  alt="Kalkulator sudut antara dua vektor"
-              /></a>
+            <div class="rounded-md shadow-md overflow-hidden relative">
+              <img
+                src="dist/img/portfolio/1.png"
+                alt="Kalkulator sudut antara dua vektor"
+              />
+              <a
+                href="https://fajarnur0.github.io/Sudut-Antara-Dua-Vektor/"
+                target="_blank"
+                class="w-full h-full bg-gradient-to-t from-gray-700 to-transparent absolute top-0 left-0 z-50 opacity-0 hover:opacity-100 transition-all duration-200 ease-in-out"
+              >
+                <span
+                  class="text-white text-2xl font-medium tracking-widest align-bottom absolute bottom-3 left-4"
+                  >Preview (Click)</span
+                >
+              </a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
-              <a
-                href="https://fajarnur0.github.io/kalkulus/"
-                target="_blank"
-                class="hover:text-primary"
-                >Kalkulator Sudut Antara Dua Vektor</a
-              >
+              Kalkulator Sudut Antara Dua Vektor
             </h3>
             <p class="font-medium text-base text-secondary text-justify">
               Kalkulator ini dibuat dengan tujuan untuk mencari besar sudut
@@ -331,29 +342,52 @@
               Aplikasi perhitungan tersebut dibuat dengan menggunakan HTML, CSS
               dan Javascript.
             </p>
+            <a
+              href="https://github.com/fajarnur0/Sudut-Antara-Dua-Vektor.git"
+              target="_blank"
+              class="text-primary underline block mt-2 tracking-widest hover:text-secondary"
+              >Repository</a
+            >
           </div>
 
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
+            <div class="rounded-md shadow-md overflow-hidden relative">
               <img
                 src="dist/img/portfolio/2.png"
-                alt="Sistem CRUD Manajemen Stok Obat Apotek"
+                alt="Website Penilaian Siswa PAUD"
               />
+              <a
+                href="https://fajarnur0.github.io/Frontend-Sistem-Informasi-PAUD/"
+                target="_blank"
+                class="w-full h-full bg-gradient-to-t from-gray-700 to-transparent absolute top-0 left-0 z-50 opacity-0 hover:opacity-100 transition-all duration-200 ease-in-out"
+              >
+                <span
+                  class="text-white text-2xl font-medium tracking-widest align-bottom absolute bottom-3 left-4"
+                  >Preview For Desktop</span
+                >
+              </a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
-              Sistem CRUD Manajemen Stok Obat Apotek
+              Website Penilaian Siswa PAUD
             </h3>
             <p class="font-medium text-base text-secondary text-justify">
-              Pada project dengan studi kasus manajemen stok obat apotek MDS
-              Farmasi, Fajar berkontribusi dalam pembuatan program CRUD (<i
-                >Create, Read, Update, Delete</i
-              >) stok obat yang terintegrasi dengan database melalui bahasa PHP
-              dan DBMS MySQL.
+              Kindergarten merupakan website pengelolaan nilai peserta didik
+              PAUD yang terintegrasi database untuk mempermudah proses
+              pengelolaan data dan nilai siswa oleh guru, monitoring laporan
+              nilai oleh orang tua siswa, serta manajemen data guru dan mata
+              pelajaran oleh admin. Fajar bertanggung jawab dalam implementasi
+              frontend dengan menggunakan HTML dan Tailwind CSS.
             </p>
+            <a
+              href="https://github.com/fajarnur0/Frontend-Sistem-Informasi-PAUD.git"
+              target="_blank"
+              class="text-primary underline block mt-2 tracking-widest hover:text-secondary"
+              >Repository</a
+            >
           </div>
 
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
+            <div class="rounded-md shadow-md overflow-hidden relative">
               <img
                 src="dist/img/portfolio/3.png"
                 alt="Sistem CRUD E-Katalog Produk UMKM"
@@ -372,30 +406,105 @@
           </div>
 
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/portfolio/4.png" alt="Formulir Survey" />
+            <div class="rounded-md shadow-md overflow-hidden relative">
+              <img
+                src="dist/img/portfolio/4.png"
+                alt="CitaSaji Mobile Web Design"
+              />
+              <a
+                href="https://www.figma.com/proto/nj4nwhsxTkQ1lyr5StFqvQ/CitaSaji---Startup?node-id=25-54&t=ala7ZJNIf4qNKUMH-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=25%3A54"
+                target="_blank"
+                class="w-full h-full bg-gradient-to-t from-gray-700 to-transparent absolute top-0 left-0 z-50 opacity-0 hover:opacity-100 transition-all duration-200 ease-in-out"
+              >
+                <span
+                  class="text-white text-2xl font-medium tracking-widest align-bottom absolute bottom-3 left-4"
+                  >Preview (Click)</span
+                >
+              </a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
-              Formulir Survey
+              CitaSaji - Mobile Web Design
             </h3>
             <p class="font-medium text-base text-secondary text-justify">
-              Formulir survey dibuat dengan menggunakan form input HTML dan
-              didukung dengan CSS dalam hal layouting dan dekorasi.
+              CitaSaji Startup merupakan desain web untuk tampilan mobile yang
+              berorientasi pada penjualan makanan-makanan dan katering dari para
+              pedagang untuk kawasan kampus 2 Universitas Siliwangi, Mugarsari,
+              Tasikmalaya. Dibuat menggunakan figma.
             </p>
+            <a
+              href="https://www.figma.com/proto/nj4nwhsxTkQ1lyr5StFqvQ/CitaSaji---Startup?node-id=25-54&t=ala7ZJNIf4qNKUMH-1&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=25%3A54"
+              target="_blank"
+              class="text-primary underline block mt-2 tracking-widest hover:text-secondary"
+              >Prototype</a
+            >
           </div>
 
           <div class="mb-12 p-4 md:w-1/2">
-            <div class="rounded-md shadow-md overflow-hidden">
-              <img src="dist/img/portfolio/5.png" alt="Landing Page" />
+            <div class="rounded-md shadow-md overflow-hidden relative">
+              <img
+                src="dist/img/portfolio/5.png"
+                alt="Web Steganography For Message"
+              />
+              <a
+                href="https://fajarnur0.github.io/Steganography-PVD/"
+                target="_blank"
+                class="w-full h-full bg-gradient-to-t from-gray-700 to-transparent absolute top-0 left-0 z-50 opacity-0 hover:opacity-100 transition-all duration-200 ease-in-out"
+              >
+                <span
+                  class="text-white text-2xl font-medium tracking-widest align-bottom absolute bottom-3 left-4"
+                  >Preview (Click)</span
+                >
+              </a>
             </div>
             <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
-              Landing Page
+              Web Steganography For Message
             </h3>
             <p class="font-medium text-base text-secondary text-justify">
-              Fajar pernah membuat desain Landing Page atau halaman tampilan
-              awal dari studi kasus bisnis showroom mobil & motor dengan
-              menggunakan HTML dan CSS.
+              Website steganografi menggunakan metode PVD (<i
+                >Pixel Differencing Value</i
+              >) merupakan website untuk menyembunyikan pesan rahasia ke dalam
+              media citra digital secara tak kasat mata. Dibuat menggunakan
+              HTML, Tailwind CSS, dan Javascript.
             </p>
+            <a
+              href="https://github.com/fajarnur0/Steganography-PVD.git"
+              target="_blank"
+              class="text-primary underline block mt-2 tracking-widest hover:text-secondary"
+              >Repository</a
+            >
+          </div>
+
+          <div class="mb-12 p-4 md:w-1/2">
+            <div class="rounded-md shadow-md overflow-hidden relative">
+              <img src="dist/img/portfolio/6.png" alt="Web Enkripsi RC4" />
+              <a
+                href="https://fajarnur0.github.io/Aplikasi-Enkripsi-Algoritma-RC4/"
+                target="_blank"
+                class="w-full h-full bg-gradient-to-t from-gray-700 to-transparent absolute top-0 left-0 z-50 opacity-0 hover:opacity-100 transition-all duration-200 ease-in-out"
+              >
+                <span
+                  class="text-white text-2xl font-medium tracking-widest align-bottom absolute bottom-3 left-4"
+                  >Preview (Click)</span
+                >
+              </a>
+            </div>
+            <h3 class="font-semibold text-xl text-dark mt-5 mb-3">
+              Web Enkripsi Pesan Metode RC4
+            </h3>
+            <p class="font-medium text-base text-secondary text-justify">
+              Website enkripsi pesan menggunakan metode RC4 (<i
+                >Rivest Cipher 4</i
+              >) merupakan website untuk melakukan pengacakan pesan rahasia
+              menjadi karakter-karakter ASCII sesuai dengan algoritma RC4,
+              sehingga pesan tidak dapat dikenali dan terlindungi. Dibuat
+              menggunakan HTML, Tailwind CSS, dan Javascript.
+            </p>
+            <a
+              href="https://github.com/fajarnur0/Aplikasi-Enkripsi-Algoritma-RC4.git"
+              target="_blank"
+              class="text-primary underline block mt-2 tracking-widest hover:text-secondary"
+              >Repository</a
+            >
           </div>
         </div>
       </div>
@@ -636,7 +745,7 @@
           <div class="w-full px-4 mb-12 text-slate-300 font-medium md:w-1/3">
             <h2 class="font-bold text-4xl text-white mb-5">Fajar</h2>
             <h3 class="font-bold text-2xl mb-2">Hubungi Saya</h3>
-            <p>fanursenursyah@gmail.com</p>
+            <a href="mailto:fajarnurdiansyah004@gmail.com" class="text-primary mb-2 block hover:text-secondary">fajarnurdiansyah004@gmail.com</a>
             <p>Jl. Noenoeng Tisnasaputra No. 48</p>
             <p>Tasikmalaya</p>
           </div>
